--- a/src/styles/CanvasContainer.scss
+++ b/src/styles/CanvasContainer.scss
@@ -9,5 +9,5 @@
 .back {
   position: absolute;
   height: 100px;
-  transform: translate(5px, -20px);
+  transform: translate(0px, -25px);
 }
